fix: resolve documentations
